<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".ImagedownloadActivity" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/banner_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/banner_image"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/banner_image_desc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/banner_image_desc"
            android:textAppearance="?android:attr/textAppearanceSmall" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:gravity="center"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/text_image_file1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_image_file1"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <EditText
                android:id="@+id/loc_image_file1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/loc_image_file1"
                android:inputType="none"
                android:textAppearance="?android:attr/textAppearanceSmall" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/text_image_file2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_image_file2"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <EditText
                android:id="@+id/loc_image_file2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/loc_image_file2"
                android:inputType="none"
                android:textAppearance="?android:attr/textAppearanceSmall" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/text_image_file3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_image_file3"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <EditText
                android:id="@+id/loc_image_file3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/loc_image_file3"
                android:inputType="none"
                android:textAppearance="?android:attr/textAppearanceSmall" />
        </LinearLayout>

        <Button
            android:id="@+id/btn_startDownload"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:onClick="startDownload"
            android:text="@string/btn_startDownload" />
    </LinearLayout>

</RelativeLayout>
