<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/banner_main"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/banner_main"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:id="@+id/banner_mainDesc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/banner_mainDesc"
            android:textAppearance="?android:attr/textAppearanceMedium" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:gravity="center"
        android:orientation="vertical" >

        <Button
            android:id="@+id/button_pdfActivity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:onClick="pdfActivity"
            android:text="@string/button_pdfActivity" />

        <Button
            android:id="@+id/button_ImageActivity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:onClick="imageActivity"
            android:text="@string/button_ImageActivity" />

        <Button
            android:id="@+id/button_TextActivity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:onClick="textActivity"
            android:text="@string/button_TextActivity" />
    </LinearLayout>
<Button
            android:id="@+id/button_Close"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
            android:layout_gravity="center"
            android:onClick="closeApp"
            android:text="@string/button_Close" />
</RelativeLayout>